Docker files changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,60 +1,63 @@
 version : "3"
 services:
-  lbp-api:
+  ggwp-be-api:
     build:
       context: .
       dockerfile: dockerfiles/Api.Dockerfile
-    container_name: lbp-api
+    container_name: ggwp-be-api
     depends_on:
-      - lbp-pg
-#      - lbp-es
+      - ggwp-be-pg
+#      - ggwp-be-es
     volumes:
       - .:/var/www/html
     restart: always
     ports:
-      - "1010:80"
+      - "2612:80"
     networks:
-      lbp-network:
-        ipv4_address: 10.10.1.1
+      ggwp-be-network:
+        ipv4_address: 26.226.1.1
     extra_hosts:
       - host.docker.internal:host-gateway
 
-  lbp-pg:
+  ggwp-be-pg:
     image: postgres:15
-    container_name: lbp-pg
+    container_name: ggwp-be-pg
     volumes:
-      - lbp-pg-disk:/var/lib/postgres
+      - ggwp-be-pg-disk:/var/lib/postgres
     restart: always
     environment:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: testing
     networks:
-      lbp-network:
-        ipv4_address: 10.10.1.2
+      ggwp-be-network:
+        ipv4_address: 26.226.1.2
 
-  lbp-mailpit:
+  ggwp-be-mailpit:
     image: 'axllent/mailpit:latest'
-    container_name: lbp-mailpit
+    container_name: ggwp-be-mailpit
     restart: always
+    ports:
+        - '${FORWARD_MAILPIT_PORT:-2613}:1025'
+        - '${FORWARD_MAILPIT_DASHBOARD_PORT:-2614}:8025'
     networks:
-      lbp-network:
-        ipv4_address: 10.10.1.3
+      ggwp-be-network:
+        ipv4_address: 26.226.1.3
 
-  lbp-q:
+  ggwp-be-q:
     build:
       context: .
       dockerfile: dockerfiles/QueueListener.Dockerfile
-    container_name: lbp-q
+    container_name: ggwp-be-q
     depends_on:
-      - lbp-api
+      - ggwp-be-api
     volumes:
       - .:/var/www/html
     restart: unless-stopped
     networks:
-      lbp-network:
-        ipv4_address: 10.10.1.4
+      ggwp-be-network:
+        ipv4_address: 26.226.1.4
 
-#  lbp-es:
+#  ggwp-be-es:
 #    image: elasticsearch:7.17.12
 #    environment:
 #      - discovery.type=single-node
@@ -62,50 +65,51 @@ services:
 #      - "9200:9200"
 #      - "9300:9300"
 #    volumes:
-#      - lbp-elasticsearch-disk:/usr/share/elasticsearch/data
+#      - ggwp-be-elasticsearch-disk:/usr/share/elasticsearch/data
 #    networks:
-#      lbp-network:
+#      ggwp-be-network:
 #        ipv4_address: 10.10.1.7
 
-#  lbp-0x:
+#  ggwp-be-0x:
 #    build:
 #      context: .
 #      dockerfile: dockerfiles/0x.Dockerfile
-#    container_name: lbp-0x
+#    container_name: ggwp-be-0x
 #    depends_on:
-#      - lbp-api
+#      - ggwp-be-api
 #    volumes:
 #      - .:/var/www/html
 #    restart: always
 #    networks:
-#      lbp-network:
+#      ggwp-be-network:
 #        ipv4_address: 10.10.1.5
 
-#  lbp-fe-app:
-#    build:
-#      context: .
-#      dockerfile: dockerfiles/FeApp.Dockerfile
-#    container_name: lbp-fe-app
-#    ports:
-#      - "1001:3000"
-#    volumes:
-#      - ./fe-app:/var/www/html
-#      #- ./dockerfiles:/var/www/html/dockerfiles
-#    restart: always
-#    networks:
-#      lbp-network:
-#        ipv4_address: 10.10.1.6
+  ggwp-be-fe-app:
+    build:
+
+      context: .
+      dockerfile: dockerfiles/FeApp.Dockerfile
+    container_name: ggwp-be-fe-app
+    ports:
+      - "1001:3000"
+    volumes:
+      - ./fe-app:/var/www/html
+      #- ./dockerfiles:/var/www/html/dockerfiles
+    restart: always
+    networks:
+      ggwp-be-network:
+        ipv4_address: 26.226.1.6
 
 # On-disk storage of DB data, when containers are stopped
 volumes:
-  lbp-pg-disk: {}
-  lbp-elasticsearch-disk:
+  ggwp-be-pg-disk: {}
+  ggwp-be-elasticsearch-disk:
     driver: local
 
 # Local network for services running using this docker-compose config
 networks:
-  lbp-network:
+  ggwp-be-network:
     ipam:
       driver: default
       config:
-        - subnet: 10.10.0.0/16
+        - subnet: 26.226.0.0/16
