--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,9 @@ jobs:
       image: ubuntu-2004:202201-02
     resource_class: medium
     working_directory: ~/code
-    environment:
-      - COMMITS_CHECK_ENDPOINT: https://api.reviewee.it/repository/ggwp-be/haveRejectedCommits
-      - COMMITS_CHECK_INDICATOR: \"success\":true
+#    environment:
+#      - COMMITS_CHECK_ENDPOINT: https://api.reviewee.it/repository/ggwp-be/haveRejectedCommits
+#      - COMMITS_CHECK_INDICATOR: \"success\":true
     steps:
       - checkout
       - run:
