--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,12 @@ jobs:
 #      - COMMITS_CHECK_INDICATOR: \"success\":true
     steps:
       - checkout
-      - run:
-          name: Check Rejected Commits
-          command: wget ${COMMITS_CHECK_ENDPOINT} -q -O - | grep -q ${COMMITS_CHECK_INDICATOR}
-      - run:
+#      - run:
+#          name: Check Rejected Commits
+#          command: wget ${COMMITS_CHECK_ENDPOINT} -q -O - | grep -q ${COMMITS_CHECK_INDICATOR}
+      - run:- run:
+#          name: Check Rejected Commits
+#          command: wget ${COMMITS_CHECK_ENDPOINT} -q -O - | grep -q ${COMMITS_CHECK_INDICATOR}
           name: Docker compose
           command: docker-compose -f ci-docker-compose.yml up -d
       - run:
